Fixed break in code, resized all divs to appropriate size using flexbox

--- a/style.css
+++ b/style.css
@@ -2,12 +2,20 @@
 
 
 body {
+    display: flex;
+    flex-direction: column;
+   
 
 }
 
 .header{
     background-color: #1f2937;
+    display: flex;
+    padding: 100px;
 }
+
+
+
 
 .logo{ 
     color: #f9faf8;
@@ -19,24 +27,61 @@ button {
 }
 
 .content {
+
+    color: #1f2937;
+    padding: 50px;
+    display: flex;  
+}  
+
+.title {
+    display:flex;
+    align-self: center;
+    justify-content: center;
     font-size: 36px;
     font-weight: extra-bold;
-    color: #1f2937;
+}
+.text {
+    display: flex;
+    flex-direction:
+    align-items: center;
+}
+
+/*
+.image-container {
+    display: flex;
+    flex-direction: row;
+    width: 100px;
+    height: 100px;
+   display: flex;
+    justify-content: center;
+    align-items: center;
+}
+*/
+
+.image {
+    width: 3in;
+    height: 2in;
 }
 
 .text {
 
 }
 
-.quote{
+.quote {
     color: #1f2937;
     font-size: 36px;
-    font-weight: light italic;
+    font-style: italic;
+    font-weight: 300;
     background-color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
 }
 
-.action-banner {
 
+.action-banner {
+    padding: 100px;
 }
 
 .sub-text{
@@ -45,5 +90,8 @@ button {
 
 .footer {
     background-color: #1f2937;
+    padding: 50px;
 
 }
+
+
